# trn-uts-aipa

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: requirements.txt  streamlit_app.py
docs/: demo_upload_multiple.csv  demo_upload_single.csv  model_card.md  presentation_demo_examples.md  project_plan.md  reproducibility_checklist.md  responsible_ai_audit.md  run_checklist.md
docs/AT3 Documents/: AT3_Presentation_Content.docx  AT3_Slide_Group_2.pptx  Assessment 3 Brief.docx
models/: category_model.pkl  priority_model.pkl
notebook/: exploratory-analysis-01-28042026.ipynb
notebooks/: 01_eda.ipynb  02_cleaning_feature_engineering.ipynb  03_baseline_models.ipynb  04_experiments_and_pipeline.ipynb  05_final_evaluation_and_error_analysis.ipynb  06_transformer_embedding_benchmark.ipynb
presentation/: AT3_Slide_Group_2.pptx
reports/: AT3_Final_Report_Group_2_Draft.tex  at3_status_gap_report_en.tex
reports/notebook_execution/: 01_eda.ipynb  02_cleaning_feature_engineering.ipynb  03_baseline_models.ipynb  04_experiments_and_pipeline.ipynb  06_transformer_embedding_benchmark.ipynb  (+1 more)
results/: README.md  category_failure_examples.csv  category_success_examples.csv  classification_reports.json  dashboard_summary.json  dataset_profile.json  experiment_comparison.csv  metrics_summary.csv  per_class_f1.csv  per_language_metrics.csv  priority_failure_examples.csv  priority_success_examples.csv  transformer_embedding_benchmark.csv  transformer_embedding_benchmark.json
tests/: test_confidence.py  test_reproducibility_and_ai_logic.py
(+22 files in other folders)
