[project]
name = "datascienceprinciplesapplications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.6",
    "pandas[computation,output-formatting,performance,plot]>=3.0.2",
    "python-dotenv>=1.2.2",
]
