[project]
name = "customer-support-ai"
version = "0.1.0"
description = "AI implementation for customer support ticket classification, prioritisation, routing, summarisation, and explanation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.3",
    "jupyterlab>=4.2",
    "kagglehub>=1.0.0",
    "joblib>=1.4",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas[computation,output-formatting,performance,plot]>=2.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.4",
    "seaborn>=0.13.2",
    "streamlit>=1.36",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
